# glcpe

./: .gitignore  CMakeLists.txt
glcpe/: Application.cpp  Application.h  CMakeLists.txt  Layer.cpp  Window.h  main.cpp
glcpe/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
glcpe/Platform/Windows/: EmscriptenWindow.cpp  EmscriptenWindow.h  SDLWindow.cpp  SDLWindow.h  WindowsWindow.cpp  WindowsWindow.h
glcpe/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  RenderCommand.cpp  RenderCommand.h  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  VertexArray.cpp
